SERVER-60413 Fix the critical section reason used by moveChunk

(cherry picked from commit 628aa5d9fe2624d40bb1b0a041521806e7d03d86)